--- a/src/index.css
+++ b/src/index.css
@@ -26,17 +26,32 @@ input[type=range]::-moz-range-thumb {
   width: 8px;
 }
 
+input[type=range]{
+  -webkit-appearance: none;
+}
+
 input[type=range]::-webkit-slider-runnable-track {
+  height: 4px;
   background: #ccc;
-};
+  border: none;
+}
 
 input[type=range]::-webkit-slider-thumb {
-  background: #7a8088;
-  border-radius: 1px;
+  -webkit-appearance: none;
   border: none;
-  box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
   height: 12px;
   width: 8px;
+  background: #7a8088;
+  border-radius: 1px;
+  margin-top: -4px;
+}
+
+input[type=range]:focus {
+  outline: none;
+}
+
+input[type=range]:focus::-webkit-slider-runnable-track {
+  background: #ccc;
 }
 
 .gain-value {
